<resources>
    <string name="app_name">ReadingList</string>
    <string name="title_activity_book_details">BookDetailsActivity</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="photo_url">Picture</string>
    <string name="save_changes">Save Changes</string>
    <string name="logout">Logout</string>
    <string name="uploaded_image">Uploaded Image</string>
    <string name="book_cover_image">Book Cover Image</string>
    <string name="pick_image" />
    <string name="email"> Email</string>
    <string name="password"> Password</string>
    <string name="login"> Login</string>
    <string name="sign_up_link"> Don\'t have an account? come and sign up</string>
    <string name="sign_up"> Sign Up</string>
    <string name="login_link"> Already have an account? come and login</string>
    <string name="input_edit_text" />
    <string name="email_error">Email is invalid</string>
    <string name="name_error">Name is invalid</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_error">Passwords don\'t match</string>
    <string name="password_error">Password must be 6 characters long, contain numbers,an upper case letter and a lower case letter</string>
    <string name="profile">Profile</string>
    <string name="my_books_list">My Books List</string>
    <string name="library">Library</string>
    <string name="publish_date">Publish Date</string>
    <string name="number_of_pages">Number of Pages</string>
    <string name="publisher">Publisher</string>
    <string name="title">Title</string>
    <string name="subtitle">subtitle</string>
    <string name="description">description</string>
    <string name="preview">Preview</string>
    <string name="previewLink" />
    <string name="line">________________________________</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="book_pages">Book Pages</string>
    <string name="booksListFragment" />
    <string name="delete">Delete</string>
    <string name="add_to_list">Add to List</string>
    <string name="name">Name</string>
    <string name="image_error">Image Error</string>
    <string name="add_books">Add Books</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="edit_user">Edit User</string>
    <string name="name_placeholder">User Name</string>
    <string name="email_example">user@gmail.com</string>
    <string name="email_headline">Email:</string>
    <string name="no_changes">No Changes</string>
    <string name="change_picture">Change Profile picture</string>
    <string name="return_content_desc">return content description</string>
    <string name="select_profile_picture">Select Your Profile Picture</string>
    <string name="return_books">Cancel aading a book</string>
    <string name="buy_link">Buy Link</string>
    <string name="content">Contect</string>
    <string name="post_review">Book Review</string>
    <string name="edit_review">Edit Review</string>
    <string name="delete_review">Delete Review</string>
</resources>