<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.readingbooks.ProfileActivity">

    <data>
        <variable
            name="viewModel"
            type="com.example.readingbooks.viewModels.ProfileViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal"
        tools:ignore="ExtraText">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_profile"
            android:contentDescription="@string/uploaded_image"
            android:layout_marginBottom="16dp"/>

        <com.example.readingbooks.views.CustomTextInput
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstName"
            android:text="@={viewModel.firstName}"
            app:helperTextEnabled="@={!viewModel.isFirstNameValid()}"/>

        <com.example.readingbooks.views.CustomTextInput
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastName"
            android:text="@={viewModel.lastName}"
            app:helperTextEnabled="@={viewModel.isLastNameValid()}"/>

        <Button
            android:id="@+id/pickImageButton"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_image"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btnSave"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:layout_marginTop="8dp"/>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_bar"
            style="@style/Widget.MaterialComponents.CircularProgressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnLogout"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginTop="8dp"/>

    </LinearLayout>
</layout>