<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.readingbooks.BookDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Displaying our book image-->
            <ImageView
                android:id="@+id/idIVbook"
                android:layout_width="130dp"
                android:layout_height="160dp"
                android:layout_margin="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <!--Displaying book publisher-->
                <TextView
                    android:id="@+id/idTVpublisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/publisher"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <!--Displaying number of pages of book-->
                <TextView
                    android:id="@+id/idTVNoOfPages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:padding="4dp"
                    android:text="@string/number_of_pages"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <!--Displaying book publish date-->
                <TextView
                    android:id="@+id/idTVPublishDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:padding="4dp"
                    android:text="@string/publish_date"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <!--Displaying book title-->
        <TextView
            android:id="@+id/idTVTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <!--Displaying book subtitle-->
        <TextView
            android:id="@+id/idTVSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:text="@string/subtitle"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <!--Displaying book description-->
        <TextView
            android:id="@+id/idTVDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <!--button for displaying book preview-->
            <Button
                android:id="@+id/idBtnPreview"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/preview"
                android:textAllCaps="false" />

            <!--button for opening buying page of the book-->
            <Button
                android:id="@+id/idBtnBuy"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="Buy"
                android:textAllCaps="false" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
